--- a/securitytest/config.json
+++ b/securitytest/config.json
@@ -1,5 +1,9 @@
 {
   "burp_lib": "burp-rest-api-1.0.3.jar",
+  "burp_options": [
+    "-Xmx1024M",
+    "--headless.mode=true"
+  ],
   "proxy_url": "localhost:8888",
   "api_url": "http://localhost:8090",
   "report_type": "HTLM",
