--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,10 +1,10 @@
 # Path to sources
-#sonar.sources=.
+sonar.sources=src/main/java,src/main/docker,src/main/resources,src/main/webapp
 #sonar.exclusions=
 #sonar.inclusions=
 
 # Path to tests
-#sonar.tests=
+sonar.tests=src/test/java,src/test/javascript,src/test/resources
 #sonar.test.exclusions=
 #sonar.test.inclusions=
 
